# name: test_add_workflow_flow[task-slug-"task-slug"|task-True]
  <class 'OrderedDict'> {
    'addWorkflowFlow': <class 'dict'> {
      'clientMutationId': None,
      'workflow': <class 'dict'> {
        'flows': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'createdByGroup': 'admin',
                'createdByUser': 'admin',
                'next': '"task-slug"|task',
                'tasks': <class 'list'> [
                  <class 'dict'> {
                    'slug': 'task-slug',
                  },
                ],
              },
            },
          ],
          'totalCount': 1,
        },
        'tasks': <class 'list'> [
          <class 'dict'> {
            'slug': 'maybe-stock-capital',
          },
          <class 'dict'> {
            'slug': 'task-slug',
          },
          <class 'dict'> {
            'slug': 'trial-condition',
          },
        ],
      },
    },
  }
---
# name: test_query_all_workflows
  <class 'dict'> {
    'allWorkflows': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'allowAllForms': False,
            'allowForms': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'slug': 'answer-city-whether',
                  },
                },
              ],
            },
            'description': '
              Above little central. Appear catch toward help wind class kid.
              Player relationship to. Whose scientist draw free property consider rather.
            ',
            'flows': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'next': 'see-region',
                    'tasks': <class 'list'> [
                      <class 'dict'> {
                        'slug': 'treat-pick-sure',
                      },
                    ],
                  },
                },
              ],
              'totalCount': 1,
            },
            'meta': <class 'dict'> {
            },
            'name': 'Jessica Holloway',
            'slug': 'body-perhaps',
            'startTasks': <class 'list'> [
              <class 'dict'> {
                'slug': 'treat-pick-sure',
              },
            ],
            'tasks': <class 'list'> [
              <class 'dict'> {
                'slug': 'treat-pick-sure',
              },
            ],
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_save_workflow
  <class 'OrderedDict'> {
    'saveWorkflow': <class 'dict'> {
      'clientMutationId': 'testid',
      'workflow': <class 'dict'> {
        'allowAllForms': False,
        'allowForms': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'slug': 'answer-city-whether',
              },
            },
          ],
          'totalCount': 1,
        },
        'meta': <class 'dict'> {
        },
        'name': 'Jessica Holloway',
        'slug': 'body-perhaps',
      },
    },
  }
---
